<resources>
    <string name="app_name">Quản Lý Nhà Trọ Trí Đức</string>
    <string name="name_101">101</string>
    <string name="name_102">102</string>
    <string name="name_103">103</string>
    <string name="name_104">104</string>
    <string name="name_105">105</string>
    <string name="name_201">201</string>
    <string name="name_202">202</string>
    <string name="name_203">203</string>
    <string name="name_204">204</string>
    <string name="name_205">205</string>
    <string name="name_301">301</string>
    <string name="name_302">302</string>
    <string name="name_303">303</string>
    <string name="name_304">304</string>
    <string name="name_305">305</string>
    <string name="name_401">401</string>
    <string name="name_402">402</string>
    <string name="name_403">403</string>
    <string name="name_404">404</string>
    <string name="name_405">405</string>
    <string name="name_501">501</string>
    <string name="name_502">502</string>

    <string name="tang_mot">Tầng trọ 1</string>
    <string name="tang_hai">Tầng trọ 2</string>
    <string name="tang_ba">Tầng trọ 3</string>
    <string name="tang_bon">Tầng trọ 4</string>
    <string name="tang_nam">Tầng trọ 5</string>

    <string name="phong_thue">Phòng:</string>
    <string name="songuoi_thue">Số người:</string>
    <string name="soxe_thue">Số xe:</string>
    <string name="sotiencoc_thue">Số tiền cọc:</string>
    <string name="hint">Nhập</string>
    <string name="button_xacnhan">Xác nhận</string>
    <string name="button_huy">Hủy</string>

    <string name="thu_phi">Thu phí phòng</string>
    <string name="tra_phong">Trả phòng</string>
    <string name="cap_nhat">Cập nhật phòng</string>

    <string name="thoi_gian">Thời gian</string>
    <string name="ki_dien">Số kí điện:</string>
    <string name="tien_phong">Tiền phòng:</string>
    <string name="tien_net">Tiền Internet:</string>
    <string name="tien_rac">Tiền rác:</string>
    <string name="tong">Tổng:</string>
    <string name="tien_xe">Tiền xe</string>
    <string name="tien_nuoc">Tiền nước:</string>

    <string name="don_gia_dien">Tiền/ kWh Điện:</string>
    <string name="don_gia_nuoc">Tiền nước/Người:</string>
    <string name="dg_xe">Tiền xe/ Xe:</string>
    <string name="menu_item">Cập nhật đơn giá</string>
    <string name="khong_value">.000</string>

</resources>
